--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
-    "name": "OLCS Test helpers",
+    "name": "olcs/olcs-testhelpers",
     "description": "OLCS Test helpers",
+    "type": "library",
     "require": {
         "php": ">=5.4"
     },
