--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Olcs\\Test\\": "src/Test/"
+            "Olcs\\TestHelpers\\": "src/TestHelpers/"
         }
     },
     "config": {
